# django-lesson

./: .gitignore  README.md  pyproject.toml  requirements.txt
blog/: start.sh  stop.sh
blog/blog/: settings.py  urls.py  wsgi.py
blog/myapp/: admin.py  forms.py  models.py  urls.py  views.py
blog/myapp/management/commands/: add_posts.py  create_authors.py
blog/myapp/migrations/: 0001_initial.py  0002_author.py  0003_post.py
blog/myapp/templates/myapp/: about.html  authors.html  game.html  index.html  new_author.html  new_post.html  post.html
blog/templates/: base.html
shop/firstapp/: admin.py  forms.py  models.py  urls.py  views.py
shop/firstapp/management/commands/: add_picture_stub.py  create_client.py  create_items.py  create_order_by_client.py  del_item_by_client.py  del_item_db_by_id.py  del_item_db_by_name.py  del_orders_by_client.py  read_total_price_by_client.py  update_item_price.py
shop/firstapp/migrations/: 0001_initial.py  0002_alter_item_added_at.py  0003_alter_item_added_at.py
shop/firstapp/templates/firstapp/: add_image.html  add_item.html  index.html  item.html  order.html
shop/shop/: settings.py  urls.py
shop/templates/: base.html
